# WOWY_Advanced_Analytics

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pyrightconfig.json
data/combined/regression/: maybe.example.csv
data/combined/wowy/: games.example.csv
docs/: architecture.md  assumptions.md  code_standards_checker_spec.md  data_format.md  data_refactor_handoff.md  data_refactor_plan.md  dev_notes.md  goat_calculator_long_term_idea.md  ideas.md  metric_cache_rewrite.md  metrics.md  missing_player_stats.md  models.md  normalized_game_cache_refactor.md  redesign_handoff.md  refactor_plan.md  refactor_plan_2.md  roadmap.md  season_refactor_plan.md  team_abbreviations.txt
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.css  App.jsx  App.tsx  index.css  main.tsx
frontend/src/app/: api.ts  leaderboardApiTypes.ts  leaderboardDebug.ts  leaderboardFilters.ts  leaderboardParams.ts  leaderboardQuery.ts  leaderboardSeason.ts  leaderboardStream.ts  leaderboardTeams.ts  leaderboardTypes.ts  loading.ts  loadingTypes.ts  metric.ts  metricTypes.ts  query.ts  rawrStream.ts  types.ts  useLeaderboardControls.ts  useLeaderboardPage.ts  useLeaderboardRequest.ts  useLoadingPanel.ts  useMetricOptions.ts  useTheme.ts
frontend/src/components/: About.tsx  AboutRawr.tsx  AboutWowy.tsx  AboutWowyShrunk.tsx  AppHeader.tsx  CachedFiltersPanel.tsx  CustomQueryPanel.tsx  LeaderboardChart.tsx  LeaderboardFiltersPanel.tsx  LoadingStatus.tsx  NumericField.tsx  ResultsPanel.tsx  ResultsTable.tsx  TeamSelector.tsx  _MathBlock.tsx
scripts/: _render.py  _render_cli.py  audit_nba_source.py  cache_all_seasons.py  cache_season_data.py  cache_season_status.py  check_package_boundaries.py  check_package_exports.py  compare_rawr_configs.py  eoinamoore_csv_schema.py  normalize_cache_seasons.py  parquet.py  plot_wowy_player_history.py  rebuild_player_metrics_db.py  run_regression_pipeline.py  run_wowy_pipeline.py  team_quarter_coverage.py
src/: main.py
src/rawr_analytics/: atomic_io.py  main.py
src/rawr_analytics/app/: __init__.py  _query_seasons.py
src/rawr_analytics/basketball/: __init__.py  build_models.py  errors.py  ingest_logging.py  models.py  player_participation.py  validation.py
src/rawr_analytics/cli/: __init__.py  _common.py  _failure_logging.py  _ingest_terminal.py  _metric_query_cli.py  _rebuild_terminal.py  _requests.py  cache_season_data.py  compare_rawr_calc_vars.py  compare_rawr_configs.py  download_kaggle.py  (+10 more)
src/wowy/: all_cached_cli.py  analysis.py  atomic_io.py  cache_pipeline.py  cache_validation.py  cli.py  combine_games_cli.py  derive_wowy.py  derive_wowy_cli.py  formatting.py  games.csv  games_example.csv  ingest_nba.py  ingest_nba_cli.py  io.py  main.py  nba_cache.py  nba_normalize.py  normalized_io.py  progress.py  rebuild_wowy_cache_cli.py  regression_analysis.py  regression_cli.py  regression_data.py  regression_formatting.py  regression_types.py  types.py
tests/: conftest.py  refactor_notes.md  support.py  test_all_cached_cli.py  test_analysis.py  test_atomic_io.py  test_cache_all_seasons_script.py  test_cache_migration.py  test_cache_season_data_script.py  test_cache_season_status_script.py  test_cli.py  test_combine_games_cli.py  test_db_validation.py  test_derive_wowy.py  test_formatting.py  test_ingest_nba.py  test_ingest_scripts.py  test_io.py  test_main.py  test_nba_cache.py  test_nba_normalize.py  test_nba_parsers.py  test_normalized_io.py  test_player_metrics_db.py  test_plot_wowy_player_history_script.py  test_rawr_analysis.py  test_rawr_cli.py  test_rawr_data.py  test_rawr_formatting.py  test_rawr_tuning.py  test_rebuild_wowy_cache_cli.py  test_regression_analysis.py  test_regression_cli.py  test_regression_data.py  test_regression_formatting.py  test_seasons.py  test_source_audit.py  test_source_rules.py  test_team_identity.py  test_web_app.py  (+1 more)
tests/e2e/: old_test_db_validation.py  test_db_validation.py  test_metric_real_db_queries.py
tests/integration/: old_test_nba_cache.py
tests/unit/: test_db_validation.py  test_formatting.py  test_ingest_scripts.py
(+485 files in other folders)
