[project]
name = "wowy"
version = "0.0.1"
description = "Simple game-level WOWY basketball impact prototype"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Nicholas Stafford" }]
dependencies = ["nba_api>=1.7,<2.0", "numpy>=2.0,<3.0", "matplotlib (>=3.10.8,<4.0.0)", "flask (>=3.1.3,<4.0.0)"]

[project.scripts]
wowy = "wowy.apps.wowy.cli:main"
rawr = "wowy.apps.rawr.cli:main"
wowy-web = "wowy.web.cli:main"
wowy-refresh-web-store = "wowy.web.refresh_cli:main"
wowy-audit-db = "wowy.data.db_validation_cli:main"

[dependency-groups]
test = ["pytest>=8.0,<9.0"]
dev = ["ruff>=0.11,<1.0", "pyright>=1.1.0,<2.0"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "wowy", from = "src" }]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
reportMissingImports = true
reportMissingModuleSource = true
