[project]
name = "rawr_analytics"
version = "0.0.2"
description = "Game-level basketball impact prototypes and advanced analytics."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Nicholas Stafford" }]
dependencies = [
  "nba_api>=1.7,<2.0",
  "numpy>=2.0,<3.0",
  "matplotlib (>=3.10.8,<4.0.0)",
  "flask (>=3.1.3,<4.0.0)",
]

[project.scripts]
wowy = "rawr_analytics.cli.wowy:main"
rawr = "rawr_analytics.cli.rawr:main"
web = "rawr_analytics.cli.run_web:main"
refresh-web-store = "rawr_analytics.cli.refresh_cli:main"
audit-db = "rawr_analytics.data.db_validation_cli:main"

[dependency-groups]
test = ["pytest>=8.0,<9.0"]
dev = ["ruff>=0.11,<1.0", "pyright>=1.1.0,<2.0", "vulture (>=2.16,<3.0)"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "rawr_analytics", from = "src" }]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ARG", "RUF"]
ignore = [
  "ARG001", # often noisy for callbacks / interfaces
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
venvPath = "."
reportMissingImports = true
reportMissingModuleSource = true
typeCheckingMode = "strict"
reportPrivateUsage = "error"
reportPrivateImportUsage = "error"
