[project]
name = "rawr_analytics"
version = "0.0.2"
description = "Game-level basketball impact prototypes and advanced analytics."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Nicholas Stafford" }]
dependencies = [
  "nba_api>=1.7,<2.0",
  "kagglehub>=0.3,<0.4",
  "numpy>=2.0,<3.0",
  "matplotlib>=3.10.8,<4.0.0",
  "flask>=3.1.3,<4.0.0",
  "basedpyright (>=1.39.0,<2.0.0)",
  "pyarrow (>=23.0.1,<24.0.0)",
  "pyright (>=1.1.408,<2.0.0)",
]

[project.scripts]
wowy = "rawr_analytics.cli.wowy:main"
rawr = "rawr_analytics.cli.rawr:main"
compare-rawr-configs = "rawr_analytics.cli.compare_rawr_configs:main"
ingest_nba_api = "rawr_analytics.cli.ingest_nba_api:main"
download_kaggle = "rawr_analytics.cli.download_kaggle:main"
ingest_kaggle = "rawr_analytics.cli.ingest_kaggle:main"
web = "rawr_analytics.cli.run_web:main"
refresh-web-store = "rawr_analytics.cli.refresh_metric_store:main"
audit-db = "rawr_analytics.data.db_validation_cli:main"

[dependency-groups]
test = ["pytest>=8.0,<9.0"]
dev = ["ruff>=0.11,<1.0", "basedpyright>=1.1.0,<2.0", "vulture>=2.16,<3.0"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "rawr_analytics", from = "src" }]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "TID", "F", "I", "B", "UP", "SIM", "C4", "ARG", "RUF"]
ignore = [
  "ARG001", # often noisy for callbacks / interfaces
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
